@@ -248,6 +248,8 @@ Unreleased changes (1.0-dev)
 90. NUTCH-500 - Add hadoop masters configuration file into conf folder. 
     (Emmanuel Joke via kubes)
 
+91. NUTCH-596 - ParseSegments parse content even if its not
+    CrawlDatum.STATUS_FETCH_SUCCESS (dogacan)
 
 Release 0.9 - 2007-04-02
 
